--- a/index.html
+++ b/index.html
@@ -34,16 +34,12 @@
       zoom: 16,
     });
   
-
-    var osm = Tangram.leafletLayer({
-      scene: 'scene.yaml',
-      attribution: '<a href="https://mapzen.com/tangram" target="_blank">Tangram</a> | &copy; OSM contributors | <a href="https://mapzen.com/" target="_blank">Mapzen</a>'
-    });
-  
     var slr = L.esri.dynamicMapLayer({ 
       url: 'http://csc-s-gis1-d:6080/arcgis/rest/services/Test/MA/MapServer',
       opacity: 0.7
     }).addTo(map);
+    
+    new OSMBuildings(map).load();
   
 
   </script>
