--- a/index.html
+++ b/index.html
@@ -3,17 +3,9 @@
   <meta charset=utf-8 />
   <title>SLR Testing</title>
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-
-  <!-- Load Leaflet from CDN-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-beta.2/leaflet.css" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-beta.2/leaflet.js"></script>
-
-  <!-- Load Esri Leaflet from CDN -->
-  <script src="https://cdn.jsdelivr.net/leaflet.esri/2.0.0/esri-leaflet.js"></script>
-  
-  <!-- Main tangram library -->
-  <script src="https://mapzen.com/tangram/0.4/tangram.min.js"></script>
-  
+  <!-- Mapbox.js -->
+  <script src='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.js'></script>
+  <link href='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css' rel='stylesheet' />
   <!-- 3rd party libraries -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <!-- bog-standard leaflet URL hash -->
@@ -29,13 +21,9 @@
 <body>
   <div id="map"></div>
   <script>
-    var map = L.map('map',{
-      center: [42.364423, -71.055261], 
-      zoom: 16,
-    });
+    L.mapbox.accessToken = 'pk.eyJ1IjoiYmxvb2ZlciIsImEiOiJjaW9hc2JzcjIwM25sdmlranY4dmV4ZTJiIn0.jC_kirEMwELyv0EoFmJv4Q';
+    var map = L.mapbox.map('map','mapbox.streets').setView([42.364423, -71.055261],16);
   
-  new L.TileLayer('http://{s}.tiles.mapbox.com/v4/pk.eyJ1IjoiYmxvb2ZlciIsImEiOiJjaW9hc2JzcjIwM25sdmlranY4dmV4ZTJiIn0.jC_kirEMwELyv0EoFmJv4Q/{z}/{x}/{y}.png'),
-    { attribution: 'Map tiles &copy; <a href="http://mapbox.com">MapBox</a>', maxZoom: 18 }).addTo(map);
     var slr = L.esri.dynamicMapLayer({ 
       url: 'http://csc-s-gis1-d:6080/arcgis/rest/services/Test/MA/MapServer',
       opacity: 0.7
@@ -43,7 +31,6 @@
     
     new OSMBuildings(map).load();
   
-
   </script>
 
 </body>
