--- a/index.html
+++ b/index.html
@@ -6,22 +6,24 @@
   <!-- Mapbox.js -->
   <script src='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.js'></script>
   <link href='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css' rel='stylesheet' />
+  <!-- Load Esri Leaflet from CDN -->
+  <script src="https://cdn.jsdelivr.net/leaflet.esri/2.0.0/esri-leaflet.js"></script>
   <!-- 3rd party libraries -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <!-- bog-standard leaflet URL hash -->
   <script src="lib/leaflet-hash.js"></script>
-  
   <script src="scripts/OSMBuildings-Leaflet.js"></script>
-
   <style>
     body { margin:0; padding:0; }
     #map { position: absolute; top:0; bottom:0; right:0; left:0; }
   </style>
 </head>
+
 <body>
   <div id="map"></div>
   <script>
     L.mapbox.accessToken = 'pk.eyJ1IjoiYmxvb2ZlciIsImEiOiJjaW9hc2JzcjIwM25sdmlranY4dmV4ZTJiIn0.jC_kirEMwELyv0EoFmJv4Q';
+    
     var map = L.mapbox.map('map','mapbox.streets').setView([42.364423, -71.055261],16);
   
     var slr = L.esri.dynamicMapLayer({ 
@@ -30,8 +32,6 @@
     }).addTo(map);
     
     new OSMBuildings(map).load();
-  
   </script>
-
 </body>
 </html>
