--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css' rel='stylesheet' />
   <!-- Load Esri Leaflet from CDN -->
   <script src="https://cdn.jsdelivr.net/leaflet.esri/2.0.0/esri-leaflet.js"></script>
+  <!-- OSM Buildings Leaflet -->
   <script src="scripts/OSMBuildings-Leaflet.js"></script>
   <style>
     body { margin:0; padding:0; }
@@ -17,19 +18,25 @@
 <body>
   <div id='map'></div>
   <script>
-  L.mapbox.accessToken = 'pk.eyJ1IjoiYmxvb2ZlciIsImEiOiJjaW9hc2JzcjIwM25sdmlranY4dmV4ZTJiIn0.jC_kirEMwELyv0EoFmJv4Q';
-  // Replace 'mapbox.streets' with your map id.
-  var mapboxTiles = L.tileLayer('https://api.mapbox.com/v4/mapbox.streets/{z}/{x}/{y}.png?access_token=' + L.mapbox.accessToken, {
-      attribution: '© <a href="https://www.mapbox.com/map-feedback/">Mapbox</a> © <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-  });
-  var map = L.map('map')
-      .addLayer(mapboxTiles)
-      .setView([42.3610, -71.0587], 15);
-  var slr = L.esri.dynamicMapLayer({
-    url: 'http://csc-s-gis1-d:6080/arcgis/rest/services/Test/MA/MapServer',
-    opacity: 0.7
-  }).addTo(map);
-  new OSMBuildings(map).load();
+    L.mapbox.accessToken = 'pk.eyJ1IjoiYmxvb2ZlciIsImEiOiJjaW9hc2JzcjIwM25sdmlranY4dmV4ZTJiIn0.jC_kirEMwELyv0EoFmJv4Q';
+    // Replace 'mapbox.streets' with your map id.
+    var mapboxTiles = L.tileLayer('https://api.mapbox.com/v4/mapbox.streets/{z}/{x}/{y}.png?access_token=' + L.mapbox.accessToken, {
+        attribution: '© <a href="https://www.mapbox.com/map-feedback/">Mapbox</a> © <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+    });
+    var map = L.map('map')
+        .addLayer(mapboxTiles)
+        .setView([42.3610, -71.0587], 15);
+    var slr = L.esri.dynamicMapLayer({
+      url: 'http://csc-s-gis1-d:6080/arcgis/rest/services/Test/MA/MapServer',
+      opacity: 0.7
+    }).addTo(map);
+    var osm = new L.TileLayer('https://{s}.tiles.mapbox.com/v3/osmbuildings.kbpalbpk/{z}/{x}/{y}.png', {
+      attribution: 'Map tiles &copy; <a href="http://mapbox.com">MapBox</a>',
+      maxZoom: 18,
+      maxNativeZoom: 20
+    });
+    var osmb = new OSMBuildings(map).load();
+
   </script>
 </body>
 </html>
