--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       attribution: 'Map tiles &copy; <a href="http://mapbox.com">MapBox</a>',
       maxZoom: 18,
       maxNativeZoom: 20
-    });
+    }).addTo(map);
     var osmb = new OSMBuildings(map).load();
 
   </script>
