--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         attribution: '© <a href="https://www.mapbox.com/map-feedback/">Mapbox</a> © <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
     });
     var map = L.map('map')
-        .addLayer(mapboxTiles)
+      //  .addLayer(mapboxTiles)
         .setView([42.3610, -71.0587], 15);
     var slr = L.esri.dynamicMapLayer({
       url: 'http://csc-s-gis1-d:6080/arcgis/rest/services/Test/MA/MapServer',
