--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       url: 'http://csc-s-gis1-d:6080/arcgis/rest/services/Test/MA/MapServer',
       opacity: 0.7
     }).addTo(map);
-    var osm = new L.TileLayer('https://{s}.tiles.mapbox.com/v3/osmbuildings.kbpalbpk/{z}/{x}/{y}.png', {
+    var osm = new L.TileLayer('https://{s}.tiles.mapbox.com/v3/pk.eyJ1IjoiYmxvb2ZlciIsImEiOiJjaW9hc2JzcjIwM25sdmlranY4dmV4ZTJiIn0.jC_kirEMwELyv0EoFmJv4Q/{z}/{x}/{y}.png', {
       attribution: 'Map tiles &copy; <a href="http://mapbox.com">MapBox</a>',
       maxZoom: 18,
       maxNativeZoom: 20
