--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Load Esri Leaflet from CDN -->
   <script src="https://cdn.jsdelivr.net/leaflet.esri/2.0.0/esri-leaflet.js"></script>
   <!-- OSM Buildings Leaflet -->
-  <script src="scripts/OSMBuildings-Leaflet.js"></script>
+  <script src="OSMBuildings-Leaflet.js"></script>
   <style>
     body { margin:0; padding:0; }
     #map { position:absolute; top:0; bottom:0; width:100%; }
