--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-beta.2/leaflet.js"></script>
   <!-- Load Esri Leaflet from CDN -->
   <script src="https://cdn.jsdelivr.net/leaflet.esri/2.0.0/esri-leaflet.js"></script>
+  <!-- Turf.js -->
+  <script src='https://api.tiles.mapbox.com/mapbox.js/plugins/turf/v2.0.2/turf.min.js'></script>
   <!-- OSM Buildings Leaflet -->
   <script src="OSMBuildings-Leaflet.js"></script>
   <style>
@@ -25,14 +27,13 @@
       url: 'http://csc-s-gis1-d:6080/arcgis/rest/services/Test/MA/MapServer',
       opacity: 0.7
     }).addTo(map);
-    var osm = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
-      attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
-    });
+  //  var osm = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+  //    attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
+  //  });
     var mapboxTiles = L.tileLayer('https://api.mapbox.com/v4/mapbox.streets/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoiYmxvb2ZlciIsImEiOiJjaW9hc2JzcjIwM25sdmlranY4dmV4ZTJiIn0.jC_kirEMwELyv0EoFmJv4Q', {
       attribution: '© <a href="https://www.mapbox.com/map-feedback/">Mapbox</a> © <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
     }).addTo(map);
-    new OSMBuildings(map).load();
-
+    var osmb = new OSMBuildings(map).load();
   </script>
 </body>
 </html>
