--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
       attribution: '© <a href="https://www.mapbox.com/map-feedback/">Mapbox</a> © <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
     }).addTo(map);
     var osmb = new OSMBuildings(map).load();
+    
+    var geoJsonBlock = slr;
+    setGeoJSON();
+
   </script>
 </body>
 </html>
