--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     var slr = L.esri.dynamicMapLayer({
       url: 'http://csc-s-gis1-d:6080/arcgis/rest/services/Test/New_England/MapServer',
       opacity: 0.7
-    }).addTo(map);
+    });
   //  var osm = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
   //    attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
   //  });
@@ -35,7 +35,8 @@
     }).addTo(map);
     var osmb = new OSMBuildings(map).load();
     
-    var geoJsonBlock = slr;
+    geojsonFeature = slr
+    L.geoJson(geojsonFeature).addTo(map);
     setGeoJSON();
 
   </script>
