--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     
     geojsonFeature = slr
     L.geoJson(geojsonFeature).addTo(map);
-    setGeoJSON(geojsonfeature);
+    setGeoJSON();
 
   </script>
 </body>
