--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   //  }).addTo(map);
     var osmb = new OSMBuildings(map).load();
     
-    geojsonFeature = slr
+    geojsonFeature = slr;
     L.geoJson(geojsonFeature).addTo(map);
     setGeoJSON();
 
