--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   //  }).addTo(map);
     var osmb = new OSMBuildings(map).load();
     
-    geojsonFeature = slr;
-    L.geoJson(geojsonFeature).addTo(map);
+    
+    L.geoJson(slr).addTo(map);
     setGeoJSON();
 
   </script>
