--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
     var osmb = new OSMBuildings(map).load();
     
     
-    function setGeoJSON() {
-      try {
-        var geoJson = JSON.parse(slr.value);
-      } catch(e) {}
-      osmb.set(geoJson);
-    }
-    setGeoJSON();
+  //  function setGeoJSON() {
+  //    try {
+  //      var geoJson = JSON.parse(slr.value);
+  //    } catch(e) {}
+  //    osmb.set(geoJson);
+  //  }
+  //  setGeoJSON();
 
   </script>
 </body>
