--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     var slr = L.esri.dynamicMapLayer({
       url: 'http://csc-s-gis1-d:6080/arcgis/rest/services/Test/New_England/MapServer',
       opacity: 0.7
-    });
+    }).addTo(map);
   //  var osm = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
   //    attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
   //  });
@@ -34,15 +34,6 @@
       attribution: '© <a href="https://www.mapbox.com/map-feedback/">Mapbox</a> © <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
     }).addTo(map);
     var osmb = new OSMBuildings(map).load();
-    
-    
-  //  function setGeoJSON() {
-  //    try {
-  //      var geoJson = JSON.parse(slr.value);
-  //    } catch(e) {}
-  //    osmb.set(geoJson);
-  //  }
-  //  setGeoJSON();
 
   </script>
 </body>
