--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <!-- Turf.js -->
   <script src='https://api.tiles.mapbox.com/mapbox.js/plugins/turf/v2.0.2/turf.min.js'></script>
   <!-- OSM Buildings Leaflet -->
-  <script src="OSMBuildings-Leaflet.js"></script>
+  <script src="http://cdn.osmbuildings.org/OSMBuildings-Leaflet.js"></script>
+
   <style>
     body { margin:0; padding:0; }
     #map { position:absolute; top:0; bottom:0; width:100%; }
