--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
     var mapboximagery = L.tileLayer('https://api.mapbox.com/v4/mapbox.satellite/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoiYmxvb2ZlciIsImEiOiJjaW9hc2JzcjIwM25sdmlranY4dmV4ZTJiIn0.jC_kirEMwELyv0EoFmJv4Q', {
       attribution: '© <a href="https://www.mapbox.com/map-feedback/">Mapbox</a> © <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
     });
-    var baseMaps = ({
-      "Streets": mapboxstreet
-      "Basic": mapboxgray
-      "Natural": mapboxoutdoor
-      "Imagery": mapboximagery
-    });    
+    var baseMaps = {
+      "Streets": mapboxstreet,
+      "Basic": mapboxgray,
+      "Natural": mapboxoutdoor,
+      "Imagery": mapboximagery,
+    };    
     L.control.layers(baseMaps).addTo(map);
 
     var slr = L.esri.dynamicMapLayer({
