--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
     };    
     L.control.layers(baseMaps).addTo(map);
 
-    var slr = L.esri.dynamicMapLayer({
+    var esri_slr = L.esri.dynamicMapLayer({
       url: 'http://csc-s-gis1-d:6080/arcgis/rest/services/Test/New_England/MapServer',
       opacity: 0.7
-    }).addTo(map);
+    });
     var osmb = new OSMBuildings(map).load();
+    // format is osmb.set(geoJson)
+    var slr = new OSMBuildings(map).set(esri_slr)
   </script>
 </body>
 </html>
