--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     });
     var osmb = new OSMBuildings(map).load();
     // format is osmb.set(geoJson)
-    var slr = new OSMBuildings(map).set(esri_slr);
+    // var slr = new OSMBuildings(map).set(esri_slr);
   </script>
 </body>
 </html>
