--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
       opacity: 0.7
     }).addTo(map);
     var osmb = new OSMBuildings(map).load();
-    // format is osmb.set(geoJson)
-    // osmb.set(esri_slr);
+    // format is .set(geoJson feature collection)
+    osmb.set({esri_slr});
   </script>
 </body>
 </html>
