--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     var legend = L.control({position: 'bottomright'});
     legend.onAdd = function(map) {
       var div = L.DomUtil.create('div', 'info legend'),
-        grades = [0, 2, 4, 6, 8, 10, 20],
+        grades = [0, 2, 4, 6, 8, 10],
         color = ['#c6dbef','#9ecae1','#6baed6','#4292c6','#2171b5','#084594'],
         labels = [];
       for (var i = 0; i < grades.length; i++) {
