--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       for (var i = 0; i < grades.length; i++) {
         div.innerHTML +=
             '<i style="background:' + color[i] + '"></i> ' +
-            grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] + '<br>' : '+');
+            grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] + '<br>' + '<br' : '+');
       }
       return div;
     }
