--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
       opacity: 0.7
     }).addTo(map);
     var osmb = new OSMBuildings(map).load();
-    // format is .set(geoJson feature collection)
-    //new OSMBuildings(map).set({esri_slr});
-    
+    // format is new OSMBuildings(map).set(geoJson feature collection)
+    new OSMBuildings(map).set(esri_slr);
+
     // add a legend
     var legend = L.control({position: 'bottomright'});
     legend.onAdd = function(map) {
