--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <meta charset=utf-8 />
   <title>OSMBuildings Plus SLR</title>
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+
   <!-- Load Leaflet from CDN-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-beta.2/leaflet.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-beta.2/leaflet.js"></script>
@@ -12,6 +14,9 @@
   <script src='https://api.tiles.mapbox.com/mapbox.js/plugins/turf/v2.0.2/turf.min.js'></script>
   <!-- OSM Buildings Leaflet -->
   <script src="OSMBuildings-Leaflet.js"></script>
+
+  <script type="text/javascript" src="jsonConverter.js"></script>
+
   <style>
     body { margin:0; padding:0; }
     #map { position:absolute; top:0; bottom:0; width:100%; }
@@ -80,25 +85,32 @@
       url: 'http://csc-s-gis1-d:6080/arcgis/rest/services/Test/New_England/MapServer',
       opacity: 0.7
     });
+
     var osmb = new OSMBuildings(map).load();
-    // format is new OSMBuildings(map).set(geoJson feature collection)
-     new OSMBuildings(map).set(esri_slr);
+
+    $.getJSON( "http://csc-s-gis1-d:6080/arcgis/rest/services/Test/New_England/MapServer/0/query?where=1%3D1&text=&objectIds=&time=&geometry=&geometryType=esriGeometryEnvelope&inSR=&spatialRel=esriSpatialRelIntersects&relationParam=&outFields=&returnGeometry=true&returnTrueCurves=false&maxAllowableOffset=&geometryPrecision=&outSR=&returnIdsOnly=false&returnCountOnly=false&orderByFields=&groupByFieldsForStatistics=&outStatistics=&returnZ=false&returnM=false&gdbVersion=&returnDistinctValues=false&resultOffset=&resultRecordCount=&f=pjson", function() {
+    }).done(function (esriJson) {
+      geoJson =  esriConverter().toGeoJson(esriJson);
+      // format is new OSMBuildings(map).set(geoJson feature collection)
+      new OSMBuildings(map).set(geoJson);
+      console.log(geoJson);
+    });
 
     // add a legend
     var legend = L.control({position: 'bottomright'});
     legend.onAdd = function(map) {
-			var div = L.DomUtil.create('div', 'info legend'),
-				grades = [0, 2, 4, 6, 8, 10],
-				color = ['#c6dbef','#9ecae1','#6baed6','#4292c6','#2171b5','#084594'],
-				labels = ['<strong> Sea Level Rise (m) </strong>'];
-			for (var i = 0; i < grades.length; i++) {
-				div.innerHTML +=
-				  '<i style="background:' + color[i] + '"></i> ' +
-				  grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] + '<br>' : '+');
-				}
-			return div;
-		}
-		legend.addTo(map);
+      var div = L.DomUtil.create('div', 'info legend'),
+        grades = [0, 2, 4, 6, 8, 10],
+        color = ['#c6dbef','#9ecae1','#6baed6','#4292c6','#2171b5','#084594'],
+        labels = ['<strong> Sea Level Rise (m) </strong>'];
+      for (var i = 0; i < grades.length; i++) {
+        div.innerHTML +=
+          '<i style="background:' + color[i] + '"></i> ' +
+          grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] + '<br>' : '+');
+        }
+      return div;
+    }
+    legend.addTo(map);
 
   </script>
 </body>
