--- a/index.html
+++ b/index.html
@@ -86,17 +86,17 @@
       opacity: 0.7
     });
 
-   // var osmb = new OSMBuildings(map).load();
+   var osmb = new OSMBuildings(map).load();
 
     $.getJSON( "http://csc-s-gis1-d:6080/arcgis/rest/services/Test/New_England/MapServer/0/query?where=1%3D1&text=&objectIds=&time=&geometry=&geometryType=esriGeometryEnvelope&inSR=&spatialRel=esriSpatialRelIntersects&relationParam=&outFields=&returnGeometry=true&returnTrueCurves=false&maxAllowableOffset=&geometryPrecision=&outSR=&returnIdsOnly=false&returnCountOnly=false&orderByFields=&groupByFieldsForStatistics=&outStatistics=&returnZ=false&returnM=false&gdbVersion=&returnDistinctValues=false&resultOffset=&resultRecordCount=&f=pjson", function() {
     }).done(function (esriJson) {
       geoJson =  esriConverter().toGeoJson(esriJson);
       // format is new OSMBuildings(map).set(geoJson feature collection)
-      var slr = new OSMBuildings(map).set(geoJson).setStyle({ 
-       wallColor:'rgba(100, 100, 250, 0.701961)', 
-       roofColor:'rgb(220, 220, 50)', 
-       shadows:true 
-      });
+    //  var slr = new OSMBuildings(map).set(geoJson).setStyle({ 
+    //   wallColor:'rgba(100, 100, 250, 0.701961)', 
+    //   roofColor:'rgb(220, 220, 50)', 
+    //   shadows:true 
+    //  });
       console.log(geoJson);
     });
 
