--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     var esri_slr = L.esri.dynamicMapLayer({
       url: 'http://csc-s-gis1-d:6080/arcgis/rest/services/Test/New_England/MapServer',
       opacity: 0.7
-    });
+    }).addTo(map);
 
    var osmb = new OSMBuildings(map).load();
 
