--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     $.getJSON( "http://csc-s-gis1-d:6080/arcgis/rest/services/Test/New_England/MapServer/4/query?where=1%3D1&text=&objectIds=&time=&geometry=&geometryType=esriGeometryEnvelope&inSR=&spatialRel=esriSpatialRelIntersects&relationParam=&outFields=height%2Ccolor%2CroofColor&returnGeometry=true&returnTrueCurves=false&maxAllowableOffset=&geometryPrecision=&outSR=4326&returnIdsOnly=false&returnCountOnly=false&orderByFields=&groupByFieldsForStatistics=&outStatistics=&returnZ=false&returnM=false&gdbVersion=&returnDistinctValues=false&resultOffset=&resultRecordCount=&f=pjson", function() {
     }).done(function (esriJson) {
       geoJson =  esriConverter().toGeoJson(esriJson);
-    //  new OSMBuildings(map_.set(geoJson);
+      osmb.set(geoJson);
     // ^^^ code won't load, also crashes original bldgs
       console.log(geoJson);
     });
