--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <script src='https://api.tiles.mapbox.com/mapbox.js/plugins/turf/v2.0.2/turf.min.js'></script>
   <!-- OSM Buildings Leaflet -->
   <script src="OSMBuildings-Leaflet.js"></script>
+  <!-- Main tangram library -->
+  <script src="https://mapzen.com/tangram/0.4/tangram.min.js"></script>
+  
 
   <script type="text/javascript" src="jsonConverter.js"></script>
 
@@ -85,8 +88,11 @@
       url: 'http://csc-s-gis1-d:6080/arcgis/rest/services/Test/New_England/MapServer',
       opacity: 0.7
     }).addTo(map);
-
-   var osmb = new OSMBuildings(map).load();
+    var tangram = Tangram.leafletLayer({
+      scene: 'scene.yaml',
+      attribution: '<a href="https://mapzen.com/tangram" target="_blank">Tangram</a>'
+    })
+    var osmb = new OSMBuildings(map).load();
 
     $.getJSON( "http://csc-s-gis1-d:6080/arcgis/rest/services/Test/New_England/MapServer/4/query?where=1%3D1&text=&objectIds=&time=&geometry=&geometryType=esriGeometryEnvelope&inSR=&spatialRel=esriSpatialRelIntersects&relationParam=&outFields=height%2CminHeight%2Ccolor%2CroofColor&returnGeometry=true&returnTrueCurves=false&maxAllowableOffset=&geometryPrecision=&outSR=4326&returnIdsOnly=false&returnCountOnly=false&orderByFields=&groupByFieldsForStatistics=&outStatistics=&returnZ=false&returnM=false&gdbVersion=&returnDistinctValues=false&resultOffset=&resultRecordCount=&f=pjson", function() {
     }).done(function (esriJson) {
