--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       console.log(geoJson);
     });
     
-    var intersection = turf.intersect(geoJSON, osmb);
+    var intersection = turf.intersect(geoJson, osmb);
     console.log(intersection);
     //
     // add a legend
