--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
       url: 'http://gis.cityofboston.gov/arcgis/rest/services/PublicSafety/OpenData/MapServer/6/query?outFields=*&where=1%3D1',
       opacity: 1
     }).addTo(map);
+    console.log(police);
   //  var tangram = Tangram.leafletLayer({
   //    scene: 'scene.yaml',
   //    attribution: '<a href="https://mapzen.com/tangram" target="_blank">Tangram</a>'
