--- a/index.html
+++ b/index.html
@@ -91,7 +91,18 @@
     
   $.getJSON( "http://bostonopendata.boston.opendata.arcgis.com/datasets/092857c15cbb49e8b214ca5e228317a1_2.geojson", function() {
     }).done(function (data) {
-    L.geoJson(data).addTo(map)
+    var marker = {
+      radius: 3,
+      fillColor: "#e41a1c",
+      weight: 1
+      opacity: 1
+      fillOpacity:0.8
+    };
+    var fire = (data, {
+      pointToLayer: function (feature, latlng) {
+        return L.circleMarker(latlng, marker);
+      }
+    }).addTo(map);
     });
     
     var fire = L.esri.featureLayer({
