--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
       opacity: 0.7
     }).addTo(map);
     
-    $.getJSON( "http://bostonopendata.boston.opendata.arcgis.com/datasets/092857c15cbb49e8b214ca5e228317a1_2.geojson", function() {
-      }).done(function (data) {
+    $.getJSON( "http://bostonopendata.boston.opendata.arcgis.com/datasets/092857c15cbb49e8b214ca5e228317a1_2.geojson", function(data) {
       var marker = {
         radius: 3,
         fillColor: "#e41a1c",
@@ -100,8 +99,8 @@
       };
       var fire = (data, {
         pointToLayer: function (feature, latlng) {
-          return L.circleMarker(latlng, marker);
-        }
+          return L.circleMarker(latlng, marker)
+        };
       }).addTo(map);
     });
       
