--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         opacity: 1
         fillOpacity:0.8
       };
-      var fff = L.geoJson(data);
+      var fff = L.geoJson(data).addTo(map);
       var fire = (fff, {
         pointToLayer: function (feature, latlng) {
           return L.circleMarker(latlng, marker)
