--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       };
       L.geoJson(data, {
         pointToLayer: function(feature,latlng){
-          return L.marker(latlng,geojsonMarkerOptions);
+          return L.circleMarker(latlng,geojsonMarkerOptions);
         }
       }).addTo(map);
     });
