--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         grades = [0, 2, 4, 6, 8, 10],
         ugrades = [2,4,6,8,10,' '],
         color = ['#c6dbef','#9ecae1','#6baed6','#4292c6','#2171b5','#084594'],
-        labels = ['<strong>Sea Level Rise (m)</strong><br>'];
+        labels = ['<strong>Sea Level Rise (m)<br></strong>'];
       for (var i = 0; i < grades.length; i++) {
         div.innerHTML +=
         labels.push(
